# datalib

./: .bazelignore  .bazelrc  .dockerignore  .envrc  .gitignore  AGENTS.md  BUILD.bazel  HANDOFF_blob_cas.md  MODULE.bazel  README.md  TODO.md  dag-runner-addendum.md  dag-runner.md  pyproject.toml  requirements.txt  sample_config.yaml
claude-mirror/: AGENTS.md  BUILD.bazel  pyproject.toml  requirements.txt
claude-mirror/scripts/: sync_chatgpt_web.py  sync_claude_web.py
claude-mirror/src/claude_mirror/: __init__.py  __main__.py  cli.py  config.py  dump.py  ingest.py  render.py  sqlite_load.py
claude-mirror/tests/: conftest.py  snapshot_extensions.py  test_fixtures.py  test_ingested_artifact.py  test_smoke.py  test_snapshots.py
claude-mirror/tests/fixtures/: BUILD.bazel  README.md  build_ingested.py
docs/user/config_examples/: BUILD.bazel  all_sources.yaml  claude_only.yaml  sample_config.yaml
frankweiler/: BUILD.bazel  dev.sh  dev_perseus.sh  dev_tng.sh  serve_dev.sh
frankweiler/backend/: BUILD.bazel  Cargo.toml  clippy.toml
frankweiler/backend/.cargo/: config.toml
frankweiler/backend/app_schema/: BUILD.bazel  Cargo.toml
frankweiler/backend/build_ingested/: BUILD.bazel  Cargo.toml
frankweiler/backend/core/: BUILD.bazel  Cargo.toml  build.rs
frankweiler/backend/dag/: BUILD.bazel  Cargo.toml  rustc_env.txt
frankweiler/backend/datalib_step/: BUILD.bazel  stage_wrappers.sh
frankweiler/backend/etl/: BUILD.bazel  Cargo.toml  DOLTLITE_RAW_PORT_GUIDE.md  README.md  build.rs
frankweiler/backend/http/: BUILD.bazel  Cargo.toml  build.rs
frankweiler/backend/index_lib/: BUILD.bazel  Cargo.toml
frankweiler/backend/ingest_config/: BUILD.bazel  Cargo.toml
frankweiler/backend/obs/: BUILD.bazel  Cargo.toml
frankweiler/backend/providers/: BUILD.bazel  Cargo.toml
frankweiler/backend/qmd_indexer/: BUILD.bazel  Cargo.toml
frankweiler/backend/schema/: BUILD.bazel  Cargo.toml
frankweiler/backend/signal-backup/: BUILD.bazel  Cargo.toml  build.rs
frankweiler/backend/source_common/: BUILD.bazel  Cargo.toml
frankweiler/backend/sync/: BUILD.bazel  Cargo.toml  build.rs  manual_e2e_run.sh  rustc_env.txt
frankweiler/backend/tauri-backend/: BUILD.bazel  Cargo.toml
frankweiler/backend/time/: BUILD.bazel  Cargo.toml
frankweiler/backend/whatsapp-backup/: BUILD.bazel  Cargo.toml
frankweiler/docker/: BUILD.bazel  Dockerfile  README.md  entrypoint.sh
frankweiler/openhost/: Dockerfile  openhost.toml
frankweiler/tauri/: .gitignore  Cargo.toml  README.md  build-signed-app.sh  build.rs  bundle.sh  dev.sh  latchkey-wrapper.sh  run.sh  stage-runtime.sh  tauri.conf.json
frankweiler/tauri/.cargo/: config.toml
frankweiler/tauri/dummy-dist/: index.html
frankweiler/tauri/icons/: icon.icns
frankweiler/tauri/src/: main.rs
frankweiler/ui/: BUILD.bazel  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  run_e2e.sh  tsconfig.json  vite.config.ts
frankweiler/ui/scripts/: render.mjs
frankweiler/ui/src/: App.vue  api.ts  devMode.ts  handoff.ts  main.ts  shims.d.ts  toasts.ts
frankweiler/ui/tests/: card_title.test.ts  chat_link.test.ts  columns.test.ts  config_sources.test.ts  config_split.test.ts  deeplink-fixtures.json  deeplink.test.ts  tiling_tree.test.ts  tree_layout.test.ts
hack/slack_open_debug/: BUILD.bazel
hack/slack_open_debug/src/: main.rs
hack/sqlx_doltlite_loadtest/: BUILD.bazel
hack/sqlx_doltlite_loadtest/src/: main.rs
schemas/: BUILD.bazel  anthropic.schema.json  codegen.py  documents.schema.json  download_runs.schema.json  edges.schema.json  feedback.schema.json  grid_rows.schema.json  markdowns.schema.json  sync_jobs.schema.json
src/download/: BUILD.bazel  CLAUDE_WEB_SCHEMA.md  NOTION_AUTH.md  __init__.py  chatgpt_web.py  claude_web.py  github_web.py  gitlab_web.py  latchkey_curl_shim.py  notion_official.py  notion_web.py  slack_web.py
src/ingest/: BUILD.bazel  __init__.py  __main__.py  cli.py  config.py  diff.py  documents.py  dolt_service.py  dump.py  generated_documents.py  generated_download_runs.py  generated_grid_rows.py  generated_schema.py  generated_sync_jobs.py  grid_rows.py  ingest.py  qmd_index.py  render.py  render_notion_official.py  run_source.py  sqlite_load.py
src/worker/: BUILD.bazel  __init__.py  __main__.py  download_runs.py  jobs.py  loop.py  runner.py
tests/: BUILD.bazel  conftest.py  conftest_ingested.py  conftest_notion_thread_render.py  conftest_orphan_cleanup.py  conftest_qmd_bridge_integration.py  conftest_qmd_bridge_mapping.py  conftest_slack_live.py  conftest_snapshots.py  conftest_worker.py  test_fixtures.py  test_ingested_artifact.py  test_notion_thread_render.py  test_orphan_cleanup.py  test_qmd_bridge_integration.py  test_qmd_bridge_mapping.py  test_slack_emoji.py  test_slack_link.py  test_slack_live.py  test_slack_mrkdwn.py  test_slack_user_mentions.py  test_smoke.py  test_snapshots.py  test_worker.py
tests/__snapshots__/test_snapshots/: test_qmd_file_matches_snapshot[18661749-ed35-5c92-aa13-7cb73be53387__captain-s-log-stardate-47988-1].md  test_qmd_file_matches_snapshot[68fa0001-fake-7000-8000-positronic0001__sonnet-on-a-cat-named-spot].md  test_qmd_file_matches_snapshot[68fa0002-fake-7000-8000-positronic0002__polynomial-fit-for-sensor-calibration].md  test_qmd_file_matches_snapshot[68fa0003-fake-7000-8000-positronic0003__i-have-been-reviewing-the-daystrom-institute-archives-on-sub].md  test_qmd_file_matches_snapshot[8074b3b0-3bd4-5232-843f-c8278649d1a2__mr-data-status-report].md  test_qmd_file_matches_snapshot[d0000001__make-it-so].md  (+47 more)
tests/fixtures/: BUILD.bazel  README.md  build_ingested.py  build_qmd_index.py  ingested_tng_test.py  materialize_tng_root.sh  run_pipeline_test.sh  run_sync_pipeline.py  tar_qmd.py
tools/: BUILD.bazel  check_cargo_lock_versions.sh  check_qmd_model_cache_path.sh  check_qmd_model_pins.sh  check_qmd_version_pins.sh  check_rust_unit_tests.sh  check_step_wrappers.sh  check_version_consistency.sh  insta.bzl  insta_update.sh  repin_cargo.sh  run_coverage.sh  workspace_status.sh
tools/prost_toolchain/: BUILD.bazel
(+1009 files in other folders)
