exports_files(["requirements.txt"])

test_suite(
    name = "all_tests",
    tests = [
        "//tests:test_smoke",
        "//frankweiler/backend/core:core_unittests",
        "//frankweiler/backend/http:http_unittests",
        "//frankweiler/backend/schema:schema_unittests",
        "//frankweiler/backend/tauri-backend:tauri_backend_unittests",
    ],
)
