"""Repo-root Bzlmod module for mixed-up-files (formerly personal-mirror).

Version policy: 7-day burn-in. We avoid versions released in the last 7
days because hot releases are where regressions hide. When bumping a
bazel_dep or a toolchain, check the upstream release date and prefer
the newest version that is at least 7 days old. Today's working
reference (2026-05-07): rules_python 2.0.0, rules_rust 0.70.0,
Rust 1.95.0, Bazel 9.1.0.

Bazel owns:
  - `frankweiler/backend/*` Rust crates (Extract/Translate/Load + HTTP)
  - `tests/fixtures/`       fixture genrule pipeline
  - (later) `schemas/`      cross-language types
  - (later) `frankweiler/ui/` Vue + Vitest

Bazel does NOT own:
  - The Tauri bundler (driven via cargo/pnpm directly)
  - OpenHost docker builds
  - The local `uv` venv used for editor/inner-loop work
"""

module(
    name = "mixed_up_files",
    version = "0.0.1",
)

# Rules Shell — provides sh_binary etc. (split out of bazel core in Bazel 8/9).
bazel_dep(name = "rules_shell", version = "0.6.1")

# Rules CC — needed for the cc_library that compiles doltlite's
# amalgamation. Pulled in transitively by rules_rust today but worth
# declaring explicitly since our own BUILD files use it directly.
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# doltlite amalgamation — a single-translation-unit `doltlite.c` that
# bundles the SQLite core, the prolly-tree storage engine, the
# `dolt_commit`/`dolt_log`/… version-control SQL surface, and embedded
# blake3. Pinned to a sha so the fetch is one-time-per-pin; consumed
# by `//third-party/doltlite:sqlite3`.
#
# Prior to v0.11.4 the amalgamation zip was broken — it built stock
# SQLite without the prolly hooks — so we used to pull the autoconf
# source tarball and compile every `src/*.c` individually (see git
# history of //third-party/doltlite/amalgamation.BUILD for the
# ~300-line file-curation that took). v0.11.4 fixed the amalgamation
# pipeline, so we're back to the trivial single-file build.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "doltlite_amalgamation",
    urls = ["https://github.com/dolthub/doltlite/releases/download/v0.11.5/doltlite-amalgamation-0.11.5.zip"],
    sha256 = "c9b6f4dbf46b5fa6c2a8a889ed862997f3b48b03ee745051bb6e9f4008ba66b0",
    strip_prefix = "doltlite-amalgamation-0.11.5",
    build_file = "//third-party/doltlite:amalgamation.BUILD",
)

# Rules Python — pinned to a recent stable. uv.lock ingestion via pip.parse.
bazel_dep(name = "rules_python", version = "2.0.0")

PYTHON_VERSION = "3.13"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "py_pip")

# Rust — rules_rust + crate_universe ingesting frankweiler/backend Cargo workspace.
bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# Route `libsqlite3-sys` at our bazel-built doltlite static archive
# (`//third-party/doltlite:sqlite3`) instead of compiling upstream
# SQLite. Every Rust binary downstream of sqlx-sqlite ends up statically
# linked against doltlite — no system install, no runtime dep.
#
# Mechanics:
#
#   * `gen_build_script = "on"` (the default): we KEEP libsqlite3-sys's
#     build script. Its `lib.rs` does `include!(concat!(env!("OUT_DIR"),
#     "/bindgen.rs"))` unconditionally, so the bindings module needs
#     the build script to have populated OUT_DIR with bindgen output.
#     Disabling it breaks compilation of lib.rs ("cannot find type
#     `sqlite3_vtab`" etc.).
#
#   * `build_script_env` points the build script at our bazel-built
#     header + archive. The dirname problem (Bazel's `$(execpath ...)`
#     gives file paths, not directory paths) is solved by Bazel's
#     built-in `$(BINDIR)` make-variable, which expands to
#     `bazel-out/<config>/bin`. Our genrule deposits `sqlite3.h` and
#     our cc_library deposits `libsqlite3.a` both at
#     `$(BINDIR)/third-party/doltlite/`, so a single static dir works
#     for both INCLUDE_DIR and LIB_DIR. SQLITE3_STATIC=1 makes the
#     build script emit `cargo:rustc-link-lib=static=sqlite3` instead
#     of dynamic.
#
#   * `build_script_data` materializes the header + archive into the
#     execroot the build script runs in, so $(BINDIR) paths resolve.
#
#   * `deps = ["//third-party/doltlite:sqlite3"]` threads the same
#     static archive into the rust_library link step as a native
#     compile dep, so rustc's final link command actually has the
#     `.a` available on the search path (the build script's emitted
#     `cargo:rustc-link-search=` is redundant with this but harmless).
crate.annotation(
    crate = "libsqlite3-sys",
    # Patch build.rs to absolutize workspace-relative `bazel-out/...`
    # paths in $SQLITE3_INCLUDE_DIR / $SQLITE3_LIB_DIR. Bazel's
    # `$(BINDIR)` substitution emits workspace-relative paths, but the
    # build script runs in a deep subdirectory of execroot, so those
    # paths don't resolve. The patch derives the absolute execroot from
    # CARGO_MANIFEST_DIR (which bazel always sets to an absolute path)
    # and rewrites bazel-out paths against it. Hermetic, no host env
    # required.
    patches = ["@@//third-party/doltlite:libsqlite3-sys.patch"],
    patch_args = ["-p1"],
    deps = ["@@//third-party/doltlite:sqlite3"],
    build_script_data = [
        "@@//third-party/doltlite:sqlite3.h",
        "@@//third-party/doltlite:sqlite3",
    ],
    build_script_env = {
        "SQLITE3_INCLUDE_DIR": "$(BINDIR)/third-party/doltlite",
        "SQLITE3_LIB_DIR": "$(BINDIR)/third-party/doltlite",
        "SQLITE3_STATIC": "1",
        # NOTE: LIBCLANG_PATH (also needed by libsqlite3-sys's bindgen
        # invocation) is set via .bazelrc's `--action_env`, NOT here.
        # Setting it in `build_script_env` hardcodes a single value
        # at the rule level and silently overrides `--action_env`
        # forwarding — which broke the linux-* legs of the release
        # workflow until we noticed (commit dac4a5d's investigation).
        # See .bazelrc for the macOS default + Linux override path.
    },
)

# aspect_rules_js — hermetic JS/TS toolchain so the Vite-built UI
# bundle (consumed by frankweiler_http via rust-embed) is produced by
# Bazel without any host pnpm/Node. Mirrors the install snippet
# published with aspect_rules_js v3.1.2 (released 2026-05-13).
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
# Pulled in transitively by aspect_rules_js, but we use it directly
# via `copy_to_bin` to stage Vite inputs into bazel-out.
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//frankweiler/ui:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# Exposes the lockfile's pinned pnpm so `bazel run -- @pnpm --dir
# frankweiler/ui install` works without a host install — useful for
# refreshing the lockfile after editing frankweiler/ui/package.json.
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

crate.from_cargo(
    name = "frankweiler_crates",
    cargo_lockfile = "//frankweiler/backend:Cargo.lock",
    manifests = [
        "//frankweiler/backend:Cargo.toml",
        "//frankweiler/backend/schema:Cargo.toml",
        "//frankweiler/backend/core:Cargo.toml",
        "//frankweiler/backend/http:Cargo.toml",
        "//frankweiler/backend/obs:Cargo.toml",
        "//frankweiler/backend/etl:Cargo.toml",
        "//frankweiler/backend/etl/providers/anthropic:Cargo.toml",
        "//frankweiler/backend/etl/providers/chatgpt:Cargo.toml",
        "//frankweiler/backend/etl/providers/contacts:Cargo.toml",
        "//frankweiler/backend/etl/providers/github:Cargo.toml",
        "//frankweiler/backend/etl/providers/gitlab:Cargo.toml",
        "//frankweiler/backend/etl/providers/email:Cargo.toml",
        "//frankweiler/backend/etl/providers/notion:Cargo.toml",
        "//frankweiler/backend/etl/providers/perseus:Cargo.toml",
        "//frankweiler/backend/etl/providers/slack:Cargo.toml",
        "//frankweiler/backend/qmd_indexer:Cargo.toml",
        "//frankweiler/backend/sync:Cargo.toml",
        "//frankweiler/backend/tauri-backend:Cargo.toml",
    ],
)
use_repo(crate, "frankweiler_crates")
