"""Repo-root Bzlmod module for datalib (formerly personal-mirror).

Version policy: 7-day burn-in. We avoid versions released in the last 7
days because hot releases are where regressions hide. When bumping a
bazel_dep or a toolchain, check the upstream release date and prefer
the newest version that is at least 7 days old. Today's working
reference (2026-05-07): rules_python 2.0.0, rules_rust 0.70.0,
Rust 1.95.0, Bazel 9.1.0.

Bazel owns:
  - `frankweiler/backend/*` Rust crates (Extract/Translate/Load + HTTP)
  - `tests/fixtures/`       fixture genrule pipeline
  - (later) `schemas/`      cross-language types
  - (later) `frankweiler/ui/` Vue + Vitest

Bazel does NOT own:
  - The Tauri bundler (driven via cargo/pnpm directly)
  - OpenHost docker builds
  - The local `uv` venv used for editor/inner-loop work
"""

module(
    name = "datalib",
    version = "0.0.1",
)

# Rules Shell — provides sh_binary etc. (split out of bazel core in Bazel 8/9).
bazel_dep(name = "rules_shell", version = "0.6.1")

# Rules CC — needed for the cc_library that compiles doltlite's
# amalgamation. Pulled in transitively by rules_rust today but worth
# declaring explicitly since our own BUILD files use it directly.
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# doltlite amalgamation — a single-translation-unit `doltlite.c` that
# bundles the SQLite core, the prolly-tree storage engine, the
# `dolt_commit`/`dolt_log`/… version-control SQL surface, and embedded
# blake3. Pinned to a sha so the fetch is one-time-per-pin; consumed
# by `//third-party/doltlite:sqlite3`.
#
# Prior to v0.11.4 the amalgamation zip was broken — it built stock
# SQLite without the prolly hooks — so we used to pull the autoconf
# source tarball and compile every `src/*.c` individually (see git
# history of //third-party/doltlite/amalgamation.BUILD for the
# ~300-line file-curation that took). v0.11.4 fixed the amalgamation
# pipeline, so we're back to the trivial single-file build.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "doltlite_amalgamation",
    urls = ["https://github.com/dolthub/doltlite/releases/download/v0.11.13/doltlite-amalgamation-0.11.13.zip"],
    sha256 = "f471fa5ba07a757eff1c891f935bf803861dc5d21a3fcc6a200d4fc35265ac57",
    strip_prefix = "doltlite-amalgamation-0.11.13",
    build_file = "//third-party/doltlite:amalgamation.BUILD",
)

# Rules Python — pinned to a recent stable. uv.lock ingestion via pip.parse.
bazel_dep(name = "rules_python", version = "2.0.0")

PYTHON_VERSION = "3.13"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "py_pip")

# Rust — rules_rust + crate_universe ingesting frankweiler/backend Cargo workspace.
bazel_dep(name = "rules_rust", version = "0.70.0")

# Proto / prost — first introduced for `frankweiler-signal-backup`, which
# parses Signal-Android's `Backup.proto`. We use the Bazel-native prost
# codegen path (rules_rust_prost) instead of a `prost-build` build.rs:
# codegen runs as a Bazel action driven by `rust_prost_library`, so the
# crate stays build.rs-free and the generated code is reproducible /
# cacheable across builds.
#
# Pieces:
#
#   * `rules_proto` — provides the standard `proto_library` rule that
#     `rust_prost_library` consumes.
#   * `protobuf` — stub for the `@com_google_protobuf` repo name
#     (`rust_prost_library` and `proto_library` reference it). We do NOT
#     compile protoc from source; toolchains_protoc replaces its
#     `:protoc` target below.
#   * `toolchains_protoc` — fetches a prebuilt `protoc` binary and
#     registers a `proto_toolchain`. Saves the ~30s protobuf C++ build
#     and (more importantly) the bindgen/cmake host-tool chain.
#     Upstream is archived (per BCR note) but the prebuilt-protoc story
#     it implements is unchanged; if we ever need to migrate we'll
#     switch to whatever Bazel's blessed prebuilt path is at the time.
#   * `rules_rust_prost` — provides `rust_prost_library` + the
#     toolchain type. The actual toolchain wiring (which prost / tonic
#     crate targets to use) lives at `//tools/prost_toolchain` so it
#     can reach `@frankweiler_crates//:prost` etc.
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "toolchains_protoc", version = "0.6.1")
bazel_dep(name = "rules_rust_prost", version = "0.70.0")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    # Pin a specific prebuilt-protoc release. Bumped on the same 7-day
    # burn-in cadence as everything else in this file.
    google_protobuf = "com_google_protobuf",
    version = "v33.4",
)

register_toolchains(
    "//tools/prost_toolchain",
)

RUST_EDITION = "2021"

RUST_VERSION = "1.95.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)

# --- musl cross-compilation toolchains -------------------------------
#
# The release workflow ships fully-static `*-unknown-linux-musl` builds
# alongside the gnu ones (build with `--config=musl-x86_64` /
# `--config=musl-aarch64`; see .bazelrc). rules_rust maps a musl triple
# to the same `@platforms//` constraints as its gnu sibling — there is
# no libc constraint in `@platforms` — so without help a gnu and a musl
# rust toolchain both match a `linux + <cpu>` platform and resolution
# falls back to registration order. The `//platforms:linker` constraint
# breaks the tie (see platforms/BUILD.bazel).
#
# Mechanics (mirrors rules_rust's `examples/cross_compile_musl`): each
# `rust.repository_set` below OVERRIDES the default repository set of
# the same name that `rust.toolchain` would otherwise create, so the
# first call for each name must re-declare the host's native target —
# dropping it would leave that host without a native Rust toolchain.
# The native gnu targets gain the `//platforms:unknown` constraint
# (the constraint_setting's default) so they can never match a musl
# platform; ordinary host platforms carry `:unknown` implicitly and
# resolve exactly as before.
#
# Exec hosts covered: the two Linux release runners (each cross-libc
# but same-arch → its own musl triple) and Apple Silicon macs (both
# musl triples, so most of the release path can be debugged locally;
# `frankweiler_sync_bin` is the exception — see the musl config notes
# in .bazelrc). Intel macs keep their default set untouched.
rust.repository_set(
    name = "rust_linux_x86_64",
    edition = RUST_EDITION,
    exec_triple = "x86_64-unknown-linux-gnu",
    target_compatible_with = [
        "@//platforms:unknown",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-gnu",
    versions = [RUST_VERSION],
)
rust.repository_set(
    name = "rust_linux_x86_64",
    target_compatible_with = [
        "@//platforms:musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_linux_aarch64",
    edition = RUST_EDITION,
    exec_triple = "aarch64-unknown-linux-gnu",
    target_compatible_with = [
        "@//platforms:unknown",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-gnu",
    versions = [RUST_VERSION],
)
rust.repository_set(
    name = "rust_linux_aarch64",
    target_compatible_with = [
        "@//platforms:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_macos_aarch64",
    edition = RUST_EDITION,
    exec_triple = "aarch64-apple-darwin",
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:osx",
    ],
    target_triple = "aarch64-apple-darwin",
    versions = [RUST_VERSION],
)
rust.repository_set(
    name = "rust_macos_aarch64",
    target_compatible_with = [
        "@//platforms:musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_macos_aarch64",
    target_compatible_with = [
        "@//platforms:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Hermetic musl-libc GCC cross toolchains (bazel-contrib/musl-toolchain)
# for the C/C++ half of the musl builds: the doltlite amalgamation,
# and every cargo build script that compiles native code (boring-sys2's
# cmake-driven BoringSSL, openssl-src, zstd-sys, onig_sys, ...) picks
# its CC/CXX up from the resolved cc toolchain. The toolchain enables
# `fully_static_link`, which is what makes the shipped binaries run on
# any Linux, glibc or musl, with no runtime deps. Exec platforms
# covered upstream: linux + macOS, x86_64 + arm64.
#
# `extra_target_compatible_with` stamps the same `//platforms:musl`
# constraint the rust musl toolchains use onto the cc toolchains, so
# only an explicit `--config=musl-*` build resolves them; host builds
# keep the autodetected host cc toolchain.
bazel_dep(name = "toolchains_musl", version = "0.1.27")

toolchains_musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl")
toolchains_musl.config(
    extra_target_compatible_with = ["@//platforms:musl"],
)
use_repo(toolchains_musl, "musl_toolchains_hub")

# Register the musl cc toolchains from the ROOT module, not just via
# toolchains_musl's own MODULE.bazel. Root-module registrations take
# precedence in toolchain resolution; relying on the dependency
# module's registration let Bazel's auto-configured host cc toolchain
# (registered by an earlier module in the graph, and constraint-wise a
# match for any `linux + <cpu>` platform — it carries no linker
# constraint) win the musl platforms on Linux hosts. Symptom: the
# release leg linked `latchkey_curl_impersonate` with `/usr/bin/gcc` against
# glibc-compiled BoringSSL objects and died on `__memcpy_chk` /
# `fopen64`. Harmless for every other build: these toolchains require
# `//platforms:musl`, which only the musl platforms carry. (macOS
# hosts never hit the ambiguity — a darwin host cc toolchain can't
# target linux at all.)
register_toolchains("@musl_toolchains_hub//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# Route `libsqlite3-sys` at our bazel-built doltlite static archive
# (`//third-party/doltlite:sqlite3`) instead of compiling upstream
# SQLite. Every Rust binary downstream of sqlx-sqlite ends up statically
# linked against doltlite — no system install, no runtime dep.
#
# Mechanics:
#
#   * `gen_build_script = "on"` (the default): we KEEP libsqlite3-sys's
#     build script. Its `lib.rs` does `include!(concat!(env!("OUT_DIR"),
#     "/bindgen.rs"))` unconditionally, so the bindings module needs
#     the build script to have populated OUT_DIR with bindgen output.
#     Disabling it breaks compilation of lib.rs ("cannot find type
#     `sqlite3_vtab`" etc.).
#
#   * `build_script_env` points the build script at our bazel-built
#     header + archive. The dirname problem (Bazel's `$(execpath ...)`
#     gives file paths, not directory paths) is solved by Bazel's
#     built-in `$(BINDIR)` make-variable, which expands to
#     `bazel-out/<config>/bin`. Our genrule deposits `sqlite3.h` and
#     our cc_library deposits `libsqlite3.a` both at
#     `$(BINDIR)/third-party/doltlite/`, so a single static dir works
#     for both INCLUDE_DIR and LIB_DIR. SQLITE3_STATIC=1 makes the
#     build script emit `cargo:rustc-link-lib=static=sqlite3` instead
#     of dynamic.
#
#   * `build_script_data` materializes the header + archive into the
#     execroot the build script runs in, so $(BINDIR) paths resolve.
#
#   * `deps = ["//third-party/doltlite:sqlite3"]` threads the same
#     static archive into the rust_library link step as a native
#     compile dep, so rustc's final link command actually has the
#     `.a` available on the search path (the build script's emitted
#     `cargo:rustc-link-search=` is redundant with this but harmless).
# Disable signal-backup's build.rs under Bazel. Cargo runs build.rs
# to generate the prost modules into OUT_DIR; under Bazel the same
# modules come from `rust_prost_library` (a separate crate). Without
# this annotation, crate_universe would try to run `protobuf-src`'s
# binary download from build.rs — which fails in Bazel's sandbox.
crate.annotation(
    crate = "frankweiler-signal-backup",
    gen_build_script = "off",
)

# protoc-gen-prost ships a `protoc-gen-prost` binary that
# `rust_prost_toolchain` (in //tools/prost_toolchain) consumes via the
# `protoc-gen-prost__protoc-gen-prost` target — crate_universe only
# generates that target when we explicitly opt in to gen_binaries.
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)

crate.annotation(
    crate = "libsqlite3-sys",
    # Patch build.rs to absolutize workspace-relative `bazel-out/...`
    # paths in $SQLITE3_INCLUDE_DIR / $SQLITE3_LIB_DIR. Bazel's
    # `$(BINDIR)` substitution emits workspace-relative paths, but the
    # build script runs in a deep subdirectory of execroot, so those
    # paths don't resolve. The patch derives the absolute execroot from
    # CARGO_MANIFEST_DIR (which bazel always sets to an absolute path)
    # and rewrites bazel-out paths against it. Hermetic, no host env
    # required.
    patches = ["@@//third-party/doltlite:libsqlite3-sys.patch"],
    patch_args = ["-p1"],
    deps = ["@@//third-party/doltlite:sqlite3"],
    build_script_data = [
        "@@//third-party/doltlite:sqlite3.h",
        "@@//third-party/doltlite:sqlite3",
    ],
    build_script_env = {
        "SQLITE3_INCLUDE_DIR": "$(BINDIR)/third-party/doltlite",
        "SQLITE3_LIB_DIR": "$(BINDIR)/third-party/doltlite",
        "SQLITE3_STATIC": "1",
        # NOTE: LIBCLANG_PATH (also needed by libsqlite3-sys's bindgen
        # invocation) is set via .bazelrc's `--action_env`, NOT here.
        # Setting it in `build_script_env` hardcodes a single value
        # at the rule level and silently overrides `--action_env`
        # forwarding — which broke the linux-* legs of the release
        # workflow until we noticed (commit dac4a5d's investigation).
        # See .bazelrc for the macOS default + Linux override path.
    },
)

# aspect_rules_js — hermetic JS/TS toolchain so the Vite-built UI
# bundle (consumed by frankweiler_http via rust-embed) is produced by
# Bazel without any host pnpm/Node. Mirrors the install snippet
# published with aspect_rules_js v3.1.2 (released 2026-05-13).
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
# Pulled in transitively by aspect_rules_js, but we use it directly
# via `copy_to_bin` to stage Vite inputs into bazel-out.
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//frankweiler/ui:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# Exposes the lockfile's pinned pnpm so `bazel run -- @pnpm --dir
# frankweiler/ui install` works without a host install — useful for
# refreshing the lockfile after editing frankweiler/ui/package.json.
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

crate.from_cargo(
    name = "frankweiler_crates",
    cargo_lockfile = "//frankweiler/backend:Cargo.lock",
    # `bazel mod deps` emits an INFO note that with a workspace
    # Cargo.toml, only the workspace root is required here — bazel
    # discovers per-crate manifests via the workspace's `members =`
    # list. Adding a new provider crate now means a single edit to
    # `frankweiler/backend/Cargo.toml`; no MODULE.bazel change.
    manifests = ["//frankweiler/backend:Cargo.toml"],
)
use_repo(crate, "frankweiler_crates")
